# COCOA

./: .gitignore  README.md  baseline.py  interface.py  pyproject.toml  run_cocoa.py
.github/workflows/: ci.yml
config/: cocoa_duckdb_config.json
examples/: build_demo_db.py  build_real_index.py  demo_queries.csv
src/: build_index.py
tests/: test_build_real_index.py  test_csv_paths_enumeration.py  test_duckdb_connection.py  test_end_to_end.py  test_import.py  test_interface.py
